<package>
  <name>vsnt_teleop</name>
  <version>0.0.1</version>
  <description>vsnt_teleop enables boat control with a joystick-like device by
     processing joy/Joy messages and translating them to mavros_msgs/RCIn.</description>
  <maintainer email="davihenriqueds@gmail.com">Davi Henrique</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/casnav14-vsnt/vsnt_teleop</url>

  <author email="davihenriqueds@gmail.com">Davi Henrique</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>


</package>
